package com.kspt.khandygo.core;

public interface Employee {

  int id();

  String name();
}
